# shellm

./: .env.example  README.md  pyproject.toml
shellm/: cli.py  config.py  providers.py  security.py
shellm/prompts/: __init__.py  shell_command.txt
